--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../static/css/homepage.css">
     <title>Home</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid" id="navbar">
         <a class="navbar-brand" href="/">Disaster Tweets</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,13 +25,18 @@
         </div>
     </div>
     </nav>
-    <div class="container">
+    <div>
         <form action="/get-data" method="POST">
-        <div class="mb-3">
-            <label for="lmt" class="form-label">Enter number of tweets to be generated </label>
+        <label for="lmt" class="form-label" id="lmt-label">Enter number of tweets to be generated </label>
+        <div id="control">
             <input type="text" name="limit" class="form-control" id="lmt" aria-describedby="limit">
-            <div id="emailHelp" class="form-text">Enter values between 0 and 10,000.</div>
+            <select name="model" id="mdl">
+                <option value="0">BERT</option>
+                <option value="1">Multinomial Naive Bayes</option>
+                <option value="2">Gaussian Naive Bayes</option>
+            </select>
         </div>
+        <div id="emailHelp" class="form-text">Enter values between 0 and 10,000.</div>
         <button type="submit" class="btn btn-primary">Generate</button>
         </form>
     </div>
