--- a/templates/result.html
+++ b/templates/result.html
@@ -25,6 +25,7 @@
     </div>
     </nav>
     <h1>Limit is: {{ limit }}</h1>
+    <h1>Location is: {{ location }}</h1>
     <div class="container">
     {% for i in range(pred_text|length) %}
     <div class="card">
